--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@200;300;400;600;700;900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/12-boole.css">
     <link rel="stylesheet" href="css/style.css">
     <title>Cademi</title>
@@ -12,8 +13,8 @@
     <div class="where">
       <div class="container">
         <h2>Lezioni dove vuoi tu</h2>
-        <div class="home col-lg-6">
         <!-- A CASA -->
+          <div class="home col-lg-6 col-md-4 col-xs-12">
           <img src="img/maps.png" alt="Immagine Mappa">
           <h3>A casa tua</h3>
           <p>Scegli il tuo maestro preferito e prenota la prima lezione a casa tua, a casa del maestro o nel suo studio.
@@ -21,7 +22,7 @@
         </div>
         <!--/ A CASA -->
         <!-- ONLINE -->
-        <div class="online col-lg-6">
+        <div class="online col-lg-6 offset-md-4 col-md-4 col-xs-12">
           <img src="img/online.png" alt="Immagine Schermo">
           <h3>Online</h3>
           <p>Impara senza muoverti da casa! Scegli da una vastissima lista di maestri abilitati all'insegnamento online, senza doverti preoccupare di distanze e spostamenti.</p>
@@ -35,7 +36,7 @@
       <div class="container">
         <h2>Come funziona</h2>
         <!-- CERCA -->
-        <div class="search col-lg-4">
+        <div class="search col-lg-4 col-md-6 col-xs-12">
           <img src="img/search.svg" alt="Logo Cerca">
           <h3>Cerca</h3>
           <p>Guarda i profili dei migliori maestri della tua zona. Leggi la loro biografia e le recensioni lasciate dai loro studenti.
@@ -43,7 +44,7 @@
         </div>
         <!-- /CERCA -->
         <!-- CONTATTA -->
-        <div class="contact col-lg-4">
+        <div class="contact col-lg-4 col-md-6 col-xs-12">
           <img  src="img/contatta.svg" alt="Logo Contatta">
           <h3>Contatta</h3>
           <p>Scrivi gratuitamente e senza impegno ai maestri che ti interessano e fai tutte le domande che vuoi!
@@ -51,7 +52,7 @@
         </div>
         <!-- /CONTATTA -->
         <!-- INIZIA -->
-        <div class="start col-lg-4">
+        <div class="start col-lg-4 col-md-12 col-xs-12">
           <img  src="img/male.svg" alt="Immagine insegnante">
           <h3>Inizia a suonare</h3>
           <p>Acquista un pacchetto di lezioni! Vuoi cambiare maestro? Le lezioni acquistate valgono con tutti i più di 1400 maestri Cademi!
@@ -67,7 +68,7 @@
       <div class="container">
         <h2>Perch&egrave; Cademi</h2>
         <!-- BIGGEST -->
-        <div class="biggest">
+        <div class="biggest col-lg-12 col-md-4">
           <img src="img/group.png" alt="Immagine gruppo">
           <h3>La più grande scuola d'Italia</h3>
           <p>Su Cademi trovi centinaia di Maestri qualificati e competenti in tutta Italia. Scegli quello più adatto a te e contattali senza impegno.
@@ -75,7 +76,7 @@
         </div>
         <!-- BIGGEST -->
         <!-- SATISFACTION -->
-        <div class="satisfaction">
+        <div class="satisfaction col-lg-12 col-md-4">
           <img src="img/secure.png" alt="Logo Soddisfatti">
           <h3>Soddisfazione Garantita</h3>
           <p>Se non sei soddisfatto del tuo maestro, puoi cambiarlo senza costi aggiuntivi. Le lezioni acquistate su Cademi possono essere utilizzate con tutti i nostri maestri e il nostro team è sempre disponibile per darti un consiglio!
@@ -83,14 +84,14 @@
         </div>
         <!-- SATISFACTION -->
         <!-- FLEX -->
-        <div class="flex">
+        <div class="flex col-lg-12 col-md-4">
           <img src="img/flex.png" alt="Logo Flessibilità">
           <h3>Flessibile e Conveniente</h3>
           <p>Cademi non ha alcun costo d’iscrizione a differenza delle scuole di musica tradizionali. Inoltre, sei tu a scegliere dove fare lezione e gli orari delle tue lezioni.
           </p>
         </div>
         <!-- FLEX -->
-      </div> 
+      </div>
     </div>
     <!-- /TERZA RIGA -->
 
